# bluritout

./: .gitignore  BlurItOut - Standalone.html  LICENSE  README.md  RELEASE_TASKS.md  THIRD_PARTY_NOTICES.md  app.ts
.github/workflows/: python-app.yml  release-desktop.yml
be/: main.py  pyproject.toml
engine/: README.md  __init__.py  eval_suite.json  evaluate_analysis.py  main.py  requirements-release.txt  requirements.txt  run_eval_suite.py  worker.py  worker.release.spec
engine/tests/: test_worker.py
fe/: electron-builder.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
fe/scripts/: build-engine.js
fe/src/electron/: main.ts  preload.cjs  tsconfig.json
fe/src/shared/: types.d.ts  types.js
fe/src/ui/: App.css  App.tsx  index.css
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: Button.tsx  FeatureCard.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Reveal.tsx  StepItem.tsx  icons.tsx
