[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.11.7",
    "typing>=3.10.0.0",
    "uvicorn>=0.35.0",
]
